test/Fail/UnequalTerms.err
UnequalTerms.agda:8.8-11: error: [UnequalTerms]
One !=< Zero
when checking that the expression one has type Zero
